# faireval

./: README.md  pyproject.toml  requirements.txt  setup.py
jupyternotebooks/: eval.ipynb
